# wio-terminal-aws-connect

./: README.md
.kiro/hooks/: activate-venv-install.kiro.hook  auto-test-runner.kiro.hook  test-on-save.kiro.hook
.kiro/specs/level-1/: design.md  requirements.md  tasks.md
level-1/device/: wioterminal.ino
level-1/infra/: DEPLOYMENT.md  app.py  cdk.json  pyproject.toml  requirements-dev.txt
level-1/infra/.hypothesis/examples/0af99cafaa13a2e8/: 0a71e9903650ec4c  6ef696ee45438d91  b897c2ed257fbd5e  cba6216a3c80bdbb  f24f3b486a11a4c0
level-1/infra/.hypothesis/examples/2acb0a8e4e23e46d/: 0fc573da256cf679  10a7b5ba0ff653d6  3c99cef2f70c3cb2  5c059f3e9f6fd9e5  6328645df8299fa5  6dffe8339569b49e  7656fa3f413acccb  a95303b6e3f37b06  bf04689431b57fd0  c952873a02fb319b  dd4809ff52f6aa4d  dd61db50a4650ed7  e508f95fb1499b31
level-1/infra/.hypothesis/examples/465a56919c6f791f/: f86b520c0d9a8935
level-1/infra/.hypothesis/examples/f0e0eea22d71846a/: bd9ab8d7cb4ca0f9
level-1/infra/.hypothesis/tmp/: tmpdkyzek3g  tmphkpam9zp  tmpl_b9vo6e  tmpmtbcia25  tmpozfj38ef  tmppaz_s1dd  tmpwktk_h2p
level-1/infra/infra/: infra_stack.py
level-1/infra/tests/integration/: __init__.py  test_deployment_verification.py
level-1/infra/tests/unit/: test_cdk_properties.py  test_infra_stack.py
